--- a/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
+++ b/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
@@ -71,7 +71,13 @@
    "outputs": [],
    "source": [
     "dune_df.dtypes\n",
-    "dune_df['avg_l1_calldata_gas_price_on_l1_inbox'] = dune_df['avg_l1_calldata_gas_price_on_l1_inbox'].astype(float)"
+    "dune_df['avg_l1_calldata_gas_price_on_l1_inbox'] = dune_df['avg_l1_calldata_gas_price_on_l1_inbox'].astype(float)\n",
+    "dune_df['calldata_bytes_l1_inbox'] = dune_df['calldata_bytes_l1_inbox'].fillna(0).astype(int)\n",
+    "dune_df['l1_gas_used_combined'] = dune_df['l1_gas_used_combined'].fillna(0).astype(int)\n",
+    "dune_df['l1_gas_used_inbox'] = dune_df['l1_gas_used_inbox'].fillna(0).astype(int)\n",
+    "dune_df['num_l1_submissions'] = dune_df['num_l1_submissions'].fillna(0).astype(int)\n",
+    "dune_df['num_l1_txs_combined'] = dune_df['num_l1_txs_combined'].fillna(0).astype(int)\n",
+    "dune_df['num_l1_txs_inbox'] = dune_df['num_l1_txs_inbox'].fillna(0).astype(int)"
    ]
   },
   {
