--- a/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
@@ -11,6 +11,7 @@
     "        'erc20_transfers',\n",
     "        'native_eth_transfers',\n",
     "        'daily_aggregate_transactions',\n",
+    "        # 'daily_aggregate_chain_stats', #comment out, can't align datatypes across chains.\n",
     "        ]\n",
     "set_days_batch_size = 7\n",
     "\n",
@@ -47,7 +48,6 @@
    "source": [
     "# Get Chain List\n",
     "chain_configs = ops.get_superchain_metadata_by_data_source('oplabs') # OPLabs db\n",
-    "# chain_configs = chain_configs[chain_configs['chain_name'].isin('op','zora')]\n",
     "\n",
     "if client is None:\n",
     "        client = ch.connect_to_clickhouse_db()\n",
@@ -56,7 +56,7 @@
     "def get_chain_names_from_df(df):\n",
     "    return df['blockchain'].dropna().unique().tolist()\n",
     "\n",
-    "# chain_configs"
+    "chain_configs"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# List of chains\n",
-    "chains = get_chain_names_from_df(chain_configs)\n",
+    "# chains = get_chain_names_from_df(chain_configs)\n",
     "\n",
     "# Start date for backfilling\n",
     "start_date = datetime.date(2021, 11, 1)\n",
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_materialized_view(client, chain, mv_name):\n",
+    "def create_materialized_view(client, chain, mv_name, block_time = 2):\n",
     "    table_view_name = f'{chain}_{mv_name}'\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
     "    create_file_name = f'{mv_name}_create'\n",
@@ -145,7 +145,7 @@
     "        return\n",
     "\n",
     "    query_template = get_query_from_file(f'{mv_name}_mv')\n",
-    "    query = query_template.format(chain=chain, view_name=full_view_name, table_name = table_view_name)\n",
+    "    query = query_template.format(chain=chain, view_name=full_view_name, table_name = table_view_name, block_time_sec = block_time)\n",
     "    query = gsb.process_goldsky_sql(query)\n",
     "    \n",
     "    # print(query)\n",
@@ -175,12 +175,13 @@
     "    else:\n",
     "        print(\"backfill_tracking table already exists.\")\n",
     "\n",
-    "def backfill_data(client, chain, mv_name):\n",
+    "def backfill_data(client, chain, mv_name, block_time = 2):\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
     "    full_table_name = f'{chain}_{mv_name}'\n",
-    "    current_date = start_date\n",
+    "    current_date_q = f\"SELECT DATE_TRUNC('day',MIN(timestamp)) AS start_dt FROM {chain}_blocks WHERE number = 1 AND is_deleted = 0\"\n",
+    "    current_date = client.query(current_date_q).result_rows[0][0].date()\n",
     "    \n",
-    "    while current_date < end_date:\n",
+    "    while current_date <= end_date:\n",
     "        attempts = 1\n",
     "        is_success = 0\n",
     "        days_batch_size = set_days_batch_size\n",
@@ -216,7 +217,8 @@
     "                    chain=chain,\n",
     "                    start_date=current_date,\n",
     "                    end_date=batch_end,\n",
-    "                    table_name = full_table_name\n",
+    "                    table_name = full_table_name,\n",
+    "                    block_time_sec = block_time\n",
     "                )\n",
     "                query = gsb.process_goldsky_sql(query)\n",
     "                \n",
@@ -297,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reset_materialized_view(client, chain, mv_name):\n",
+    "def reset_materialized_view(client, chain, mv_name, block_time = 2):\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
     "    table_name = f'{chain}_{mv_name}'\n",
     "\n",
@@ -312,7 +314,7 @@
     "        print(f\"Dropped table {table_name}\")\n",
     "\n",
     "        # Recreate the materialized view using the existing function\n",
-    "        create_materialized_view(client, chain, mv_name)\n",
+    "        create_materialized_view(client, chain, mv_name, block_time)\n",
     "        print(f\"Recreated materialized view {full_view_name}\")\n",
     "\n",
     "        # Clear the backfill tracking for this view\n",
@@ -332,24 +334,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # To reset a view\n",
-    "# reset_materialized_view(client, 'op', 'daily_aggregate_transactions')"
+    "# # # To reset a view\n",
+    "# for row in chain_configs.itertuples(index=False):\n",
+    "#         chain = row.chain_name\n",
+    "#         reset_materialized_view(client, chain, 'daily_aggregate_chain_stats', 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error during backfill for op_daily_aggregate_chain_stats_mv from 2021-12-13 to 2021-12-14: :HTTPDriver for https://pdmv9lhojy.us-west-2.aws.clickhouse.cloud:8443 returned response code 500)\n",
+      " Code: 70. DB::Exception: Conversion from AggregateFunction(sum, UInt128) to AggregateFunction(sum, Nullable(UInt128)) is not supported: while converting source column l2_gas_used_user_txs_per_day to destination column l2_gas_used_user_txs_per_day. (CANNOT_CONVERT_TYPE) (version 24.5.1.22957 (official build))\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Main execution\n",
     "ensure_backfill_tracking_table_exists(client)\n",
     "\n",
-    "for chain in chains:\n",
+    "for row in chain_configs.itertuples(index=False):\n",
+    "    chain = row.chain_name\n",
+    "    block_time = row.block_time_sec\n",
     "    print(f\"Processing chain: {chain}\")\n",
     "    for mv_name in mv_names:\n",
-    "        create_materialized_view(client, chain, mv_name)\n",
-    "        backfill_data(client, chain, mv_name)\n",
+    "        try:\n",
+    "            print('create matview')\n",
+    "            create_materialized_view(client, chain, mv_name, block_time)\n",
+    "        except:\n",
+    "            print('error')\n",
+    "        try:\n",
+    "            print('create backfill')\n",
+    "            backfill_data(client, chain, mv_name, block_time)\n",
+    "        except:\n",
+    "            print('error')\n",
     "        \n",
     "    print(f\"Completed processing for {chain}\")\n",
     "\n",
