--- a/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
+++ b/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
@@ -16,6 +16,12 @@
     "sys.path.pop()\n",
     "\n",
     "import time\n",
+    "import dotenv\n",
+    "\n",
+    "\n",
+    "from dune_client.types import QueryParameter\n",
+    "from dune_client.client import DuneClient\n",
+    "from dune_client.query import QueryBase\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -45,16 +51,18 @@
     "# Run Dune\n",
     "print('     dune runs')\n",
     "dune_dfs=[]\n",
+    "dune = DuneClient(os.environ[\"DUNE_API_KEY\"])\n",
     "\n",
     "days_param = d.generate_query_parameter(input=trailing_days,field_name='trailing_days',dtype='number')\n",
     "for chain in chain_layers:\n",
     "    chain_param = d.generate_query_parameter(input=chain,field_name='blockchain',dtype='text')\n",
+    "\n",
     "    int_df = d.get_dune_data(query_id = 3912454, #https://dune.com/queries/3912454\n",
-    "        name = \"daily_op_stack_chains_l1_data\",\n",
+    "        name = f\"daily_op_stack_chains_l1_data_{chain}\",\n",
     "        path = \"outputs\",\n",
     "        performance=\"large\",\n",
     "        params = [days_param, chain_param],\n",
-    "        num_hours_to_rerun=0 #always rereun\n",
+    "        num_hours_to_rerun=0\n",
     "    )\n",
     "    dune_dfs.append(int_df)\n",
     "\n",
